# leftlevel-helix

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  NOTICE  PRODUCTION_READINESS.md  PROTOCOL.md  README.md  ROADMAP.md  SECURITY.md  SECURITY_MODEL.md  SUPPORT.md  pyproject.toml  setup.py
docs/: APP_ARCHITECTURE_DECISION.md  ATTACHMENT_MODEL.md  CI_POLICY.md  COST_MODEL.md  DEPENDENCY_INVENTORY.md  DOCUMENTATION_STANDARDS.md  ESSENTIAL_SERVICE_METRICS.md  FRIEND_TESTING_READINESS.md  HELIX_EPOCH_STATE_MODEL.md  HELIX_RATCHET_AND_ANONYMITY_MODEL.md  IDENTITY_MODEL.md  INTEGRATION_STRATEGY.md  LICENSING_AND_COMMERCIAL_MODEL.md  LINK_AND_SANDBOX_POLICY.md  LOCAL_INTERFACE_TESTING.md  METRICS_RETENTION_POLICY.md  PRIVACY_CONTROLS.md  PRIVACY_NOTICE_DRAFT.md  PRIVACY_PRESERVING_METRICS.md  PRIVACY_TELEMETRY_EXPORT.md  PRODUCT_DIFFERENTIATION.md  PRODUCT_SECURITY_AND_DISTRIBUTION_PLAN.md  PROJECT_VALUES.md  PROTECTION_MATRIX.md  PROTOCOL_TEST_VECTORS.md  RELEASE_ARTIFACT_POLICY.md  RELEASE_CHECKLIST.md  RELEASE_READINESS_GATES.md  REPOSITORY_STRATEGY.md  SECRET_SCAN_POLICY.md  SIGNAL_COMPARISON_AND_SECURITY_REVIEW_PLAN.md  SIGNOFF_RECORD_TEMPLATE.md  TERMS_METRICS_DISCLOSURE_DRAFT.md  UI_AND_ATTACHMENT_ROADMAP.md  UI_EXTRACTION_PLAN.md  UI_FRIEND_VERIFICATION.md  UI_PAIRING_FLOW.md  UI_SAFE_AUTOMATION.md  UI_SECURITY_LANGUAGE.md  UI_TESTING_RULES.md  (+5 more)
examples/: demo_two_users.py
leftlevel_helix/: __init__.py  app_cli.py  app_store.py  attachment_integrity.py  attachment_refs.py  attachment_store.py  attachment_transfer.py  attachments.py  cli.py  client.py  essential_service_metrics.py  identity.py  kem.py  link_safety.py  local_api.py  metrics_retention.py  pairing_status.py  primitives.py  privacy_controls.py  privacy_metrics.py  privacy_telemetry.py  relay.py  relay_cli.py  session.py  url_validation_worker.py  util.py  vault.py  verification.py  verify_cli.py
scripts/: __init__.py  generate_artifact_manifest.py  generate_protocol_vectors.py  scan_for_secrets.py  validate_release_readiness.py
tests/: conftest.py  test_app_store.py  test_artifact_manifest.py  test_attachment_integrity.py  test_attachment_refs.py  test_attachment_store.py  test_attachment_transfer.py  (+21 more)
(+17 files in other folders)
