[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leftlevel-helix"
version = "0.6.0"
description = "LeftLevel Helix v0.6 prototype with sealed message metadata"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=41",
  "fastapi>=0.100",
  "uvicorn>=0.20",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["leftlevel_helix*"]
exclude = ["apps*", "docs*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "real_mlkem: requires a real OpenSSL 3.5+ provider with ML-KEM-768 support",
]

[project.scripts]
leftlevel-helix = "leftlevel_helix.cli:main"
leftlevel-relay = "leftlevel_helix.relay_cli:main"
leftlevel-verify = "leftlevel_helix.verify_cli:main"
leftlevel-app = "leftlevel_helix.app_cli:main"
